assets/style.css
.bg {
    background-image: url("./images/backlit-chiemsee-dawn-1363876.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 100vh;
    width: 100vw;
    max-width: 100%;
}

#welcome {
    font-family: 'Cagliostro', sans-serif;
    color: #fff;
    font-weight: bold;
    border-radius: 8px;
    width: 50%;
    padding: 20px;
    text-align: center;
    position: absolute;
    top: 75%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.btn:active {
    transform: translate(0px, 5px);
    -webkit-transform: translate(0px, 5px);
}

.enter-button {
    border-radius: 3px;
    transition: all 1s ease;
    transform: scale(1);
}

.enter-button:hover {
    font-size: 175%;
    background-image: linear-gradient(to top right, #36205a, #971797);
    transform: scale(1.1) perspective(1px);
}

.buffer {
    background-color: #e7e7e9;
}

hr {
    border-width: 5px;
    margin-left: 15px;
    margin-right: 15px;
}

#about-me {
    /* background-image: linear-gradient(to bottom, #0a0809, #291522, #451c3a, #55194a, #571c51, #611956, #5e1751, #612252, #813a71, #351125, #200914, #080305);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    font-family: 'ZCOOL XiaoWei', serif;
    color: #fff; */
    background-image: linear-gradient(to bottom right, #6b8f4dc2, #5abef8b0);
    /* background-color: rgba(165, 87, 42, 0.767); */
    background-image: url('./images/computer-contemporary-desk-1036841.jpg');
    max-height: 630px;
}

.project-bg {
    /* background-image: linear-gradient(to top, #b46153, #e6995a); */
    background-color: #e7e7e9;
    font-family: 'Frank Ruhl Libre', serif;

}

.project-card {
    color: #212529;
    margin: 0 auto;
    background-image: linear-gradient(to bottom, #88d0da, #e7f5ab);
    max-width: 500px;
    min-height: 500px;
    /* background-color: rgb(211, 125, 211); */
    font-family: 'Lato', sans-serif;
}

a {
    color: #212529;
}

a:hover {
    color: #fff;
    text-decoration: none;
}

#profile-pic {
    max-height: 450px;
    margin-top: 25px;
    border-style: solid;
    border-radius: 200px;
}

.information {
    /* border-style: solid;
    border-radius: 3px;
    padding-top: 5px; */
    /* background-image: url('./images/art-artistic-background-1831234.jpg'); */
    color: black;
    background-color: #e7e7e9;
    opacity: 0.8;
    font-family: 'Frank Ruhl Libre', serif;
    border-radius: 20px;
}

.modal-content {
    /* background-image: linear-gradient(to top right, #36205a, #971797); */
    background-image: linear-gradient(to bottom, #9bb4eb, #e7e7e9);
    font-family: 'Frank Ruhl Libre', serif;
}

#phone-number {
    /* font-size: 25px; */
    margin-bottom: 0px;
    color: #212529;
    font-family: 'Frank Ruhl Libre', serif;
}

.contact-me-div {
    /* border-style: solid;
    border-radius: 3px; */
    background-color: #e7e7e9;
    color: #212529;
    font-family: 'Frank Ruhl Libre', serif;
}

.footer {
    background-color: #212529;
    font-family: 'Frank Ruhl Libre', serif;
}

#down-arrow-1:hover, #down-arrow-2:hover {
    background-image: linear-gradient(to bottom, #44464b, #2b2b2e);
    border-radius: 15px;
}


/*-----------------------------------------------*/
/* media queries to create responsive font sizing */
/*-----------------------------------------------*/
/* mobile phones */
@media only screen and (max-width: 768px) {
    h1 {
        font-size: 24px;
    }

    h3 {
        font-size: 20px;
    }

    h5 {
        font-size: 11px;
    }

    p {
        font-size: 12px;
    }

    #job-title {
        font-size: 14px;
    }

    #profile-pic {
        max-height: 250px;
    }

    #phone-number {
        font-size: 18px;
    }

    .big-text {
        font-size: 30px;
    }
}

@media only screen and (min-width: 769px) {
    .site-pic {
        width: 900px;
        
        height: 600px;
    }
}

